--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -21,6 +21,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.mcxiaoke.volley:library:1.0.+'
     wearApp project(':wear')
     compile 'com.google.android.gms:play-services:+'
 }
