--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -21,7 +21,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.mcxiaoke.volley:library:1.0.+'
     wearApp project(':wear')
-    compile 'com.google.android.gms:play-services:+'
+    compile 'com.mcxiaoke.volley:library:1.0.+'
+    compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'com.android.support:appcompat-v7:21.0.3'
 }
